Fix compiler warnings - eliminate all deprecation and unchecked warnings
- Replace deprecated constructors: Integer(int), Long(long), Double(double)
  with Integer.valueOf(), Long.valueOf(), Double.valueOf()
- Add proper generic type parameters to HashMap and ArrayList
- Add @SuppressWarnings(unchecked) to AltBtree for complex generic types
- Add md/ documentation for the warning cleanup plan

Build now compiles with 0 warnings. All 355 tests pass.